Add announcement banner for activity registration

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -134,6 +134,9 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <div class="announcement-banner" role="status" aria-live="polite">
+      <span aria-hidden="true">📢</span> Activity registration is open until the end of the month. Don't lose your spot!
+    </div>
+  </body>
   </body>
 </html>
